Java Interview questions from RIA Advisory LLP